# GalliumEngine

./: .gitignore  LICENSE  README.md  meson.build
demo/: main.cpp
demo/objects/: MultiMat.mtl  MultiTest.mtl  TextureTest.mtl  cube.mtl
demo/objects/shaders/: default.frag  default.vert  light.vert
docs/: LICENSE  README.md
src/: gameEntity.cpp  gameEntity.hpp  genericEntity.cpp  genericEntity.hpp  lightEntity.cpp  lightEntity.hpp  meson.build  naming.txt  rheniumRenderer.cpp  rheniumRenderer.hpp  util.hpp
src/GL/: EBO.cpp  EBO.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  camera.cpp  camera.hpp  glMaterial.cpp  glMaterial.hpp  glMesh.cpp  glMesh.hpp  glShader.cpp  glShader.hpp  texture.cpp  texture.hpp  vertex.hpp
src/import/: OBJ.cpp  OBJ.hpp
